--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-showreviews.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-showreviews.tt
@@ -29,7 +29,7 @@
                     <div class="span12">
                 [% END %]
                    <div id="showreviews" class="searchresults maincontent">
-                        <h3>Recent comments <a href="[% OPACBaseURL | url %]/cgi-bin/koha/opac-showreviews.pl?format=rss" class="rsssearchlink"><i class="fa fa-rss rsssearchicon" title="Subscribe to recent comments"></i></a></h3>
+                        <h3>Recent comments <a href="[% OPACBaseURL | url %]/cgi-bin/koha/opac-showreviews.pl?format=rss" class="rsssearchlink" aria-label="Subscribe to recent comments"><i class="fa fa-rss rsssearchicon" aria-hidden="true" title="Subscribe to recent comments"></i></a></h3>
                         <table class="table table-striped">
                             [% SET AdlibrisEnabled = Koha.Preference('AdlibrisCoversEnabled') %]
                             [% SET AdlibrisURL = Koha.Preference('AdlibrisCoversURL') %]
