--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/sci/sci-main.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/sci/sci-main.tt
@@ -56,7 +56,7 @@
                 <a class="brand" href="/cgi-bin/koha/sci/sci-main.pl"><img src="[% interface | html %]/[% theme | html %]/images/koha-green-logo.png" alt=""></a>
                 <div id="checkouthelp">
                     <ul class="nav pull-right">
-                        <li><a href="/cgi-bin/koha/sci/sci-main.pl" class="helpModal-trigger" role="button" data-toggle="modal"><i class="fa fa-info-circle"></i> Help</a></li>
+                        <li><a href="/cgi-bin/koha/sci/sci-main.pl" class="helpModal-trigger" role="button" data-toggle="modal"><i class="fa fa-info-circle" aria-hidden="true"></i> Help</a></li>
                         <li><a id="sci_logout" href="/cgi-bin/koha/sci/sci-main.pl?logout.x=1" class="logout">Log out</a></li>
                     </ul>
                 </div>
@@ -124,7 +124,7 @@
                                 </table>
                                 <div>
                                     <form method="post" action="#" id="finish_form">
-                                        <button id="sci_finish_button" type="submit" class="btn"><i class="fa fa-check"></i> Finish</button>
+                                        <button id="sci_finish_button" type="submit" class="btn"><i class="fa fa-check" aria-hidden="true"></i> Finish</button>
                                     </form>
                                 </div>
                         [% ELSE %]
