--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/smart-rules.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/smart-rules.tt
@@ -96,6 +96,9 @@
                 <th>Max. suspension duration (day)</th>
                 <th>Suspension charging interval</th>
                 <th>Renewals allowed (count)</th>
+                [% IF Koha.Preference('UnseenRenewals') %]
+                <th>Unseen renewals allowed (count)</th>
+                [% END %]
                 <th>Renewal period</th>
                 <th>No renewal before</th>
                 <th>Automatic renewal</th>
@@ -200,6 +203,9 @@
                             <td>[% rule.maxsuspensiondays | html %]</td>
                             <td>[% rule.suspension_chargeperiod | html %]</td>
 							<td>[% rule.renewalsallowed | html %]</td>
+                            [% IF Koha.Preference('UnseenRenewals') %]
+                            <td>[% rule.unseen_renewals_allowed | html %]</td>
+                            [% END %]
                             <td>[% rule.renewalperiod | html %]</td>
                             <td>[% rule.norenewalbefore | html %]</td>
                             <td>
@@ -312,6 +318,7 @@
                     <td><input type="text" name="maxsuspensiondays" id="maxsuspensiondays" size="3" /> </td>
                     <td><input type="text" name="suspension_chargeperiod" id="suspension_chargeperiod" size="3" /> </td>
                     <td><input type="text" name="renewalsallowed" id="renewalsallowed" size="2" /></td>
+                    <td><input type="text" name="unseen_renewals_allowed" id="unseen_renewals_allowed" size="2" /></td>
                     <td><input type="text" name="renewalperiod" id="renewalperiod" size="3" /></td>
                     <td><input type="text" name="norenewalbefore" id="norenewalbefore" size="3" /></td>
                     <td>
@@ -378,6 +385,7 @@
                       <th>Max. suspension duration (day)</th>
                       <th>Suspension charging interval</th>
                       <th>Renewals allowed (count)</th>
+                      <th>Unseen renewals allowed (count)</th>
                       <th>Renewal period</th>
                       <th>No renewal before</th>
                       <th>Automatic renewal</th>
