--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -1015,6 +1015,10 @@ div {
         width: auto;
     }
 
+    .renew_formfield {
+        margin-bottom: 1em;
+    }
+
     .circmessage {
         margin-bottom: .3em;
         padding: 0 .4em .4em;
@@ -2413,6 +2417,14 @@ li {
 
 #circ_circulation_issue {
     position: relative;
+}
+
+#renew_as_unseen_label {
+    margin-left: 1em;
+}
+
+#renew_as_unseen_checkbox {
+    margin-right: 1em;
 }
 
 #clearscreen {
