--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/renew.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/renew.tt
@@ -52,6 +52,18 @@
                                     </form>
                                 [% END %]
 
+                            [% ELSIF error == "too_unseen" %]
+
+                                <p>[% INCLUDE 'biblio-title.inc' biblio=item.biblio %] ( [% item.barcode | html %] ) has been renewed the maximum number of consecutive times without being seen by the library )</p>
+
+                                [% IF Koha.Preference('AllowRenewalLimitOverride') %]
+                                    <form method="post" action="/cgi-bin/koha/circ/renew.pl">
+                                        <input type="hidden" name="barcode" value="[% item.barcode | html %]"/>
+                                        <input type="hidden" name="override_limit" value="1" />
+                                        <button type="submit" class="approve"><i class="fa fa-check"></i> Override limit and renew</button>
+                                    </form>
+                                [% END %]
+
                             [% ELSIF error == "too_soon" %]
 
                                 <p>[% INCLUDE 'biblio-title.inc' biblio=item.biblio %] ( [% item.barcode | html %] ) cannot be renewed before [% soonestrenewdate | $KohaDates %]. </p>
@@ -168,9 +180,21 @@
                     <fieldset>
                         <legend>Renew</legend>
 
-                        <label for="barcode">Enter item barcode: </label>
-
-                        <input name="barcode" id="barcode" size="14" class="focus" type="text" />
+                        [% IF Koha.Preference('UnseenRenewals') %]
+                            <div class="renew_formfield">
+                                <label for="barcode">Enter item barcode: </label>
+                                <input name="barcode" id="barcode" size="14" class="focus" type="text" />
+                            </div>
+                            <div class="renew_formfield">
+                                <label for="unseen">Record renewal as unseen if appropriate: </label>
+                                <input value="1" name="unseen" id="unseen" type="checkbox" />
+                            </div>
+                        [% ELSE %]
+                            <label for="barcode">Enter item barcode: </label>
+                            <input name="barcode" id="barcode" size="14" class="focus" type="text" />
+                        [% END %]
+                         <input type="submit" class="submit" value="Submit" />
+                     </fieldset>
 
                         <input type="submit" class="submit" value="Submit" />
                     </fieldset>
