Bug 24975: Use 'key' for translation lookup
This patch switches from using the original text as a key for
translations to using a dedicated 'key' field.  We also add in a 'fuzzy'
flag to denote when the source text has changed and as such the
pre-existing translations may be incorrect.

ToDo:
1/ Expose 'Fuzzy' on the 'Localization' admin page
2/ Add a 'translation_key' method to Koha::Itemtype to encourage the
adoption of a standardly names accessor to get the 'translation_key'
from a Koha::Object derived class.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/localization.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/localization.tt
@@ -46,6 +46,7 @@
                         <thead>
                             <tr>
                                 <th>Group</th>
+                                <th>Key</th>
                                 <th>Text</th>
                                 <th>Translations</th>
                             </tr>
@@ -91,6 +92,10 @@
                     {
                         name: 'group',
                         data: 'group',
+                    },
+                    {
+                        name: 'key',
+                        data: 'key',
                     },
                     {
                         name: 'text',
