--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/catalogue_stats.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/catalogue_stats.tt
@@ -135,7 +135,7 @@
 				<td><select name="Filter" id="[% item_itype | html %]">
 					<option value=""> </option>
                     [% FOREACH itemtype IN itemtypes %]
-                        <option value="[% itemtype.itemtype | html %]">[% ItemTypes.t(itemtype.description) | html %]</option>
+                        <option value="[% itemtype.itemtype | html %]">[% ItemTypes.t(itemtype.translation_key) | html %]</option>
                     [% END %]
 					</select>
 				</td>
