--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/issues_avg_stats.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/issues_avg_stats.tt
@@ -171,7 +171,7 @@
                     <select name="Filter" id="itemtypes">
                         <option value=""></option>
                         [% FOREACH itemtype IN itemtypes %]
-                        <option value="[%- itemtype.itemtype | html -%]">[%- ItemTypes.t(itemtype.description) | html -%]</option>
+                        <option value="[%- itemtype.itemtype | html -%]">[%- ItemTypes.t(itemtype.translation_key) | html -%]</option>
                         [% END %]
                     </select>
                 </td>
