Bug 27378: Add new 'modaljs' syspref type
This commit adds a new 'modaljs' syspref type. This is similar to the existing
'modalselect' syspref type but instead of using a file to create a list of
selectable options which are displayed in the modal, it assumes that anything
can happen within the modal driven by JS, and whatever happens is going to
return a string, that will be saved as the syspref value. In our case, the
string will be all the details of the “chunks” concatenated into a string

--- a/koha-tmpl/intranet-tmpl/prog/css/preferences.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/preferences.css
@@ -2,7 +2,8 @@
 .preference-multi,
 .preference-long,
 .preference-file,
-.preference-modalselect {
+.preference-modalselect,
+.preference-modaljs {
     width: 20em;
 }
 
@@ -14,11 +15,13 @@
     width: 5em;
 }
 
-input[type="text"].modalselect {
+input[type="text"].modalselect,
+input[type="text"].modaljs {
     cursor: pointer;
 }
 
-input[type="text"].modalselect:hover {
+input[type="text"].modalselect:hover,
+input[type="text"].modaljs:hover {
     background-color: #FFC;
 }
 
