--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-patron-consent.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-patron-consent.tt
@@ -56,6 +56,11 @@
 
                     </form>
 
+                    [% IF Koha.Preference('CookieConsent') %]
+                        <h5>Cookie consents</h5>
+                        <button id="viewCookieConsents" type="button" class="btn btn-success">View your cookie consents</button>
+                    [% END %]
+
                 </div> <!-- / #userpasswd -->
             </div> <!-- / .span10 -->
         </div> <!-- / .row-fluid -->
