--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -4202,6 +4202,86 @@ div#makechart ol li {
     list-style: none;
 }
 
+#consentJSItems {
+    #consentJSWarning {
+        margin: 20px 0;
+        text-align: center;
+        font-weight: 800;
+        font-size: 120%;
+    }
+    .consentJSItem {
+        margin-bottom: 30px;
+        padding: 10px;
+        border: 1px solid #ccc;
+    }
+    .consentRow {
+        display: flex;
+        margin-bottom: 20px;
+        .consentItem {
+            margin-right: 40px;
+        }
+        .consentItem:last-child {
+            margin-right: 0;
+        }
+    }
+    .codeRow {
+        display: block;
+    }
+    .consentDelete {
+        display: block;
+        text-align: right;
+    }
+}
+
+/* Cookie consent bar */
+#cookieConsentBar {
+    display: none;
+    padding: 20px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,0.7);
+    color: rgba(255,255,255,0.9);
+    z-index: 1;
+    a:link, a:visited {
+        color: #d7ebff;
+    }
+    #consentButtons {
+        margin-top: 10px;
+        text-align: right;
+    }
+    button:not(:last-child) {
+        margin-right: 10px;
+    }
+}
+
+/* Cookie consent modal */
+#cookieConsentModal {
+    .modal-dialog {
+        width: 700px;
+    }
+    .consentModalItem {
+        display: flex;
+        align-items: center;
+        border: 1px solid #ccc;
+        padding: 10px 20px;
+        border-radius: 5px;
+    }
+    .consentModalItem:not(:last-child) {
+        margin-bottom: 20px;
+    }
+    .consentItemCheckbox {
+        padding-right: 20px;
+    }
+    .consentItemName {
+        font-weight: bold;
+    }
+    #cookieConsentPopupText {
+        margin: 20px 0;
+    }
+}
+
 @media (min-width: 200px) {
 
 }
