--- a/koha-tmpl/opac-tmpl/bootstrap/css/sco.css
+++ b/koha-tmpl/opac-tmpl/bootstrap/css/sco.css
@@ -1,1 +1,343 @@
-@font-face{font-family:NotoSans;font-style:normal;font-weight:400;src:local("Noto Sans Regular"),url(fonts/NotoSans-Regular-webfont.woff2) format("woff2"),url(fonts/NotoSans-Regular-webfont.woff) format("woff")}@font-face{font-family:NotoSans;font-style:bold;font-weight:700;src:local("Noto Sans Bold"),url(fonts/NotoSans-Bold-webfont.woff2) format("woff2"),url(fonts/NotoSans-Bold-webfont.woff) format("woff")}@font-face{font-family:NotoSans;font-style:italic;font-weight:400;src:local("Noto Sans Italic"),url(fonts/NotoSans-Italic-webfont.woff2) format("woff2"),url(fonts/NotoSans-Italic-webfont.woff) format("woff")}@font-face{font-family:NotoSans;font-style:italic;font-weight:700;src:local("Noto Sans Bold Italic"),url(fonts/NotoSans-BoldItalic-webfont.woff2) format("woff2"),url(fonts/NotoSans-BoldItalic-webfont.woff) format("woff")}body,html{height:100%}body{background:#fcf9fc none;font-family:sans-serif;font-size:16px}.fonts-loaded body{font-family:NotoSans}.navbar .divider-vertical{border-left-color:#fcf9fc;border-right-color:#fcf9fc}.navbar .nav li.dropdown>a:focus .caret,.navbar .nav li.dropdown>a:hover .caret{border-bottom-color:#85ca11;border-top-color:#85ca11}.navbar-inverse .brand{color:#9fe1ff}.navbar-inverse .navbar-inner ul.dropdown-menu a:hover{color:#fff}.navbar-inverse .navbar-inner li>a{color:#727272;font-weight:700;text-shadow:none}.navbar-inverse .navbar-inner li>a:focus,.navbar-inverse .navbar-inner li>a:hover{color:#85ca11}.navbar-inverse .navbar-inner li.dropdown>a:focus .caret,.navbar-inverse .navbar-inner li.dropdown>a:hover .caret{border-bottom-color:#85ca11;border-top-color:#85ca11}.navbar-inverse .navbar-inner li.dropdown.open>.dropdown-toggle{background-color:transparent;color:#85ca11}.navbar-inverse .navbar-inner li.dropdown.open>.dropdown-toggle .caret,.navbar-inverse .navbar-inner li.dropdown.open>.dropdown-toggle .caret:hover{border-bottom-color:#85ca11;border-top-color:#85ca11}.navbar-inner{background:#fcf9fc none}.navbar-fixed-bottom.navbar-static-bottom{position:static}.navbar-fixed-bottom .navbar-inner{box-shadow:none;min-height:45px}#wrap{height:auto!important;height:100%;margin:0 auto -46px;min-height:100%;padding-left:40px;padding-right:40px}#changelanguage{clear:both;min-height:45px}#changelanguage .nav>.active>p{padding:0 15px}#i18nMenu{margin-left:1em}#i18nMenu li{font-size:85%}#i18nMenu li a:hover{color:#85ca11}#i18nMenu li li,#i18nMenu li li>a{font-size:100%}#i18nMenu li li>a:hover{color:#fff}#i18nMenu li a{color:#0076b2}#i18nMenu .dropdown-menu li p{clear:both;display:block;font-weight:400;line-height:20px;padding:3px 20px;white-space:nowrap}#koha_url p{color:#666;float:right;margin:0}body{background-color:#fcf9fc}a,a:visited{color:#0076b6}a.title{font-weight:700}.ui-widget-content a,.ui-widget-content a:visited{color:#0076b6}h1{font-size:140%}h1,h2{color:#727272;line-height:150%}h2{font-size:130%}h3{font-size:120%;line-height:150%}h3,h4{color:#727272}h4{font-size:110%}h5{font-size:100%}caption,h5{color:#727272}caption{font-size:120%;font-weight:700;margin:.5em 0;text-align:left}input,textarea{width:auto}input[type=password]:focus,input[type=text]:focus{border-color:#85ca11;box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 8px hsla(82,63%,71%,.6)}legend{color:#727272;font-size:110%;font-weight:700}th{background-color:#e2e8e8}.main{background-color:#fff;border-color:#f0f3f3;margin:.5em 20px;padding:.8em 0}.navbar-inverse .navbar-inner{background:#fcf9fc none;border-color:#fcf9fc;box-shadow:none}.navbar-inverse .brand,.navbar-inverse .nav li a,.navbar-inverse .nav li a:focus,.navbar-inverse .nav li a:hover{color:#727272;font-weight:700}.navbar-inverse .nav li.dropdown a:focus .caret,.navbar-inverse .nav li.dropdown a:hover .caret{border-bottom-color:#85ca11;border-top-color:#85ca11}.navbar-inverse .nav li.dropdown.open>.dropdown-toggle{background-color:transparent;color:#85ca11}.navbar-inverse .nav li.dropdown.open>.dropdown-toggle .caret,.navbar-inverse .nav li.dropdown.open>.dropdown-toggle .caret:hover,.navbar .nav li.dropdown>a:focus .caret,.navbar .nav li.dropdown>a:hover .caret{border-bottom-color:#85ca11;border-top-color:#85ca11}.dropdown-menu{border-radius:0}.dropdown-menu>li>a:focus,.dropdown-menu>li>a:hover{background:#85ca11 none;color:#fff}.table-striped tbody>tr:nth-child(odd)>td,.table-striped tbody>tr:nth-child(odd)>th{background-color:#f0f3f3}.modal-header .closebtn{margin-top:2px}.closebtn{color:#000;filter:alpha(opacity=20);float:right;font-size:20px;font-weight:700;line-height:20px;opacity:.2;text-shadow:0 1px 0 #fff}.closebtn:hover{color:#000;cursor:pointer;filter:alpha(opacity=40);opacity:.4;text-decoration:none}button.closebtn{background:transparent;border:0;cursor:pointer;padding:0}.btn-group label,.btn-group select{font-size:13px}.alert{background:linear-gradient(180deg,#fffbe5 0,#fff0b2 9%,#fff1a8 89%,#f7e665);border-color:#d6c43b;color:#333}.alert .closebtn{line-height:20px;position:relative;right:-21px;top:-2px}.alert-info{background:linear-gradient(180deg,#f4f6fa 0,#eaeef5 4%,#e8edf6 96%,#cddbf2);border-color:#c5d1e5;color:#333}.alert-success{background:linear-gradient(180deg,#f8ffe8 0,#e3f5ab 4%,#dcf48d 98%,#9ebf28);border-color:#9fba35;color:#333}#members a.logout{color:#e8583c;padding:0 .3em}.inline{display:inline}.table .sorting_asc{background:url(../images/asc.gif) no-repeat scroll 100% #eee;padding-right:19px}.table .sorting_desc{background:url(../images/desc.gif) no-repeat scroll 100% #eee;padding-right:19px}.table .sorting{background:url(../images/ascdesc.gif) no-repeat scroll 100% #eee;padding-right:19px}.table .nosort,.table .nosort.sorting,.table .nosort.sorting_asc,.table .nosort.sorting_desc{background:#e2e8e8 none;padding-right:19px}.table-bordered,.table-bordered thead:first-child tr:first-child>th:first-child,.table-bordered thead:first-child tr:first-child>th:last-child,.table-bordered thead:first-child tr:last-child>th:first-child,.table-bordered thead:first-child tr:last-child>th:last-child{border-radius:0}#sci_logout{color:#e8583c}#sci_append_button,#sci_checkin_button,#sci_refresh_button{margin-bottom:10px}#sci_refresh_button{color:#333}
+@font-face {
+  font-family: "NotoSans";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Noto Sans Regular"), url("fonts/NotoSans-Regular-webfont.woff2") format("woff2"), url("fonts/NotoSans-Regular-webfont.woff") format("woff"); }
+
+@font-face {
+  font-family: "NotoSans";
+  font-style: bold;
+  font-weight: 700;
+  src: local("Noto Sans Bold"), url("fonts/NotoSans-Bold-webfont.woff2") format("woff2"), url("fonts/NotoSans-Bold-webfont.woff") format("woff"); }
+
+@font-face {
+  font-family: "NotoSans";
+  font-style: italic;
+  font-weight: 400;
+  src: local("Noto Sans Italic"), url("fonts/NotoSans-Italic-webfont.woff2") format("woff2"), url("fonts/NotoSans-Italic-webfont.woff") format("woff"); }
+
+@font-face {
+  font-family: "NotoSans";
+  font-style: italic;
+  font-weight: 700;
+  src: local("Noto Sans Bold Italic"), url("fonts/NotoSans-BoldItalic-webfont.woff2") format("woff2"), url("fonts/NotoSans-BoldItalic-webfont.woff") format("woff"); }
+
+html,
+body {
+  height: 100%; }
+
+body {
+  background: #FCF9FC none;
+  font-family: sans-serif;
+  font-size: 16px; }
+
+.fonts-loaded body {
+  font-family: "NotoSans"; }
+
+.navbar .divider-vertical {
+  border-left-color: #FCF9FC;
+  border-right-color: #FCF9FC; }
+
+.navbar .nav li.dropdown > a:focus .caret {
+  border-bottom-color: #85CA11;
+  border-top-color: #85CA11; }
+
+.navbar .nav li.dropdown > a:hover .caret {
+  border-bottom-color: #85CA11;
+  border-top-color: #85CA11; }
+
+.navbar-inverse .brand {
+  color: #9FE1FF;
+  font-weight: bold; }
+
+.navbar-inverse .navbar-inner {
+  background: #FCF9FC none;
+  border-color: #FCF9FC;
+  -webkit-box-shadow: none;
+          box-shadow: none; }
+  .navbar-inverse .navbar-inner ul.dropdown-menu a:hover {
+    color: #FFF; }
+  .navbar-inverse .navbar-inner li > a {
+    color: #727272;
+    font-weight: bold;
+    text-shadow: none; }
+    .navbar-inverse .navbar-inner li > a:hover {
+      color: #85CA11; }
+    .navbar-inverse .navbar-inner li > a:focus {
+      color: #85CA11; }
+  .navbar-inverse .navbar-inner li.dropdown > a:hover .caret {
+    border-bottom-color: #85CA11;
+    border-top-color: #85CA11; }
+  .navbar-inverse .navbar-inner li.dropdown > a:focus .caret {
+    border-bottom-color: #85CA11;
+    border-top-color: #85CA11; }
+  .navbar-inverse .navbar-inner li.dropdown.open > .dropdown-toggle {
+    background-color: transparent;
+    color: #85CA11; }
+    .navbar-inverse .navbar-inner li.dropdown.open > .dropdown-toggle .caret {
+      border-bottom-color: #85CA11;
+      border-top-color: #85CA11; }
+      .navbar-inverse .navbar-inner li.dropdown.open > .dropdown-toggle .caret:hover {
+        border-bottom-color: #85CA11;
+        border-top-color: #85CA11; }
+
+.navbar-inner {
+  background: #FCF9FC none; }
+
+.navbar-fixed-bottom.navbar-static-bottom {
+  position: static; }
+
+.navbar-fixed-bottom .navbar-inner {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  min-height: 45px; }
+
+#wrap {
+  height: auto !important;
+  height: 100%;
+  margin: 0 auto -46px;
+  min-height: 100%;
+  padding-left: 40px;
+  padding-right: 40px; }
+
+#changelanguage {
+  clear: both;
+  min-height: 45px; }
+  #changelanguage .nav > .active > p {
+    padding: 0 15px; }
+
+#i18nMenu {
+  margin-left: 1em; }
+  #i18nMenu li {
+    font-size: 85%; }
+    #i18nMenu li a:hover {
+      color: #85CA11; }
+    #i18nMenu li li {
+      font-size: 100%; }
+      #i18nMenu li li > a {
+        font-size: 100%; }
+        #i18nMenu li li > a:hover {
+          color: #FFF; }
+    #i18nMenu li a {
+      color: #0076B2; }
+  #i18nMenu .dropdown-menu li p {
+    clear: both;
+    display: block;
+    font-weight: normal;
+    line-height: 20px;
+    padding: 3px 20px;
+    white-space: nowrap; }
+
+#koha_url p {
+  color: #666666;
+  float: right;
+  margin: 0; }
+
+body {
+  background-color: #FCF9FC; }
+
+a {
+  color: #0076B6; }
+  a:visited {
+    color: #0076B6; }
+  a.title {
+    font-weight: bold; }
+
+.ui-widget-content a,
+.ui-widget-content a:visited {
+  color: #0076B6; }
+
+h1 {
+  color: #727272;
+  font-size: 140%;
+  line-height: 150%; }
+
+h2 {
+  color: #727272;
+  font-size: 130%;
+  line-height: 150%; }
+
+h3 {
+  color: #727272;
+  font-size: 120%;
+  line-height: 150%; }
+
+h4 {
+  color: #727272;
+  font-size: 110%; }
+
+h5 {
+  color: #727272;
+  font-size: 100%; }
+
+caption {
+  color: #727272;
+  font-size: 120%;
+  font-weight: bold;
+  margin: .5em 0;
+  text-align: left; }
+
+input,
+textarea {
+  width: auto; }
+
+input[type="text"]:focus, input[type="password"]:focus {
+  border-color: #85CA11;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(194, 228, 136, 0.6);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(194, 228, 136, 0.6); }
+
+legend {
+  color: #727272;
+  font-size: 110%;
+  font-weight: bold; }
+
+th {
+  background-color: #E2E8E8; }
+
+.main {
+  background-color: #FFF;
+  border-color: #F0F3F3;
+  margin: .5em 20px;
+  padding: .8em 0; }
+
+.navbar-inverse .navbar-inner {
+  background: #FCF9FC none;
+  border-color: #FCF9FC;
+  -webkit-box-shadow: none;
+          box-shadow: none; }
+
+.navbar-inverse .brand {
+  color: #727272;
+  font-weight: bold; }
+
+.navbar-inverse .nav li a,
+.navbar-inverse .nav li a:hover,
+.navbar-inverse .nav li a:focus {
+  color: #727272;
+  font-weight: bold; }
+
+.navbar-inverse .nav li.dropdown a:hover .caret, .navbar-inverse .nav li.dropdown a:focus .caret {
+  border-bottom-color: #85CA11;
+  border-top-color: #85CA11; }
+
+.navbar-inverse .nav li.dropdown.open > .dropdown-toggle {
+  background-color: transparent;
+  color: #85CA11; }
+  .navbar-inverse .nav li.dropdown.open > .dropdown-toggle .caret {
+    border-bottom-color: #85CA11;
+    border-top-color: #85CA11; }
+    .navbar-inverse .nav li.dropdown.open > .dropdown-toggle .caret:hover {
+      border-bottom-color: #85CA11;
+      border-top-color: #85CA11; }
+
+.navbar .nav li.dropdown > a:focus .caret, .navbar .nav li.dropdown > a:hover .caret {
+  border-bottom-color: #85CA11;
+  border-top-color: #85CA11; }
+
+.dropdown-menu {
+  border-radius: 0; }
+  .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+    background: #85CA11 none;
+    color: #FFFFFF; }
+
+.table-striped tbody > tr:nth-child(odd) > td,
+.table-striped tbody > tr:nth-child(odd) > th {
+  background-color: #F0F3F3; }
+
+.modal-header .closebtn {
+  margin-top: 2px; }
+
+.closebtn {
+  color: #000000;
+  filter: alpha(opacity=20);
+  float: right;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 20px;
+  opacity: .2;
+  text-shadow: 0 1px 0 #FFFFFF; }
+  .closebtn:hover {
+    color: #000000;
+    cursor: pointer;
+    filter: alpha(opacity=40);
+    opacity: .4;
+    text-decoration: none; }
+
+button.closebtn {
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  padding: 0; }
+
+.btn-group label,
+.btn-group select {
+  font-size: 13px; }
+
+.alert {
+  background: -webkit-gradient(linear, left top, left bottom, from(#FFFBE5), color-stop(9%, #FFF0B2), color-stop(89%, #FFF1A8), to(#F7E665));
+  background: linear-gradient(to bottom, #FFFBE5 0%, #FFF0B2 9%, #FFF1A8 89%, #F7E665 100%);
+  border-color: #D6C43B;
+  color: #333; }
+  .alert .closebtn {
+    line-height: 20px;
+    position: relative;
+    right: -21px;
+    top: -2px; }
+
+.alert-info {
+  background: -webkit-gradient(linear, left top, left bottom, from(#F4F6FA), color-stop(4%, #EAEEF5), color-stop(96%, #E8EDF6), to(#CDDBF2));
+  background: linear-gradient(to bottom, #F4F6FA 0%, #EAEEF5 4%, #E8EDF6 96%, #CDDBF2 100%);
+  border-color: #C5D1E5;
+  color: #333; }
+
+.alert-success {
+  background: -webkit-gradient(linear, left top, left bottom, from(#F8FFE8), color-stop(4%, #E3F5AB), color-stop(98%, #DCF48D), to(#9EBF28));
+  background: linear-gradient(to bottom, #F8FFE8 0%, #E3F5AB 4%, #DCF48D 98%, #9EBF28 100%);
+  border-color: #9FBA35;
+  color: #333; }
+
+#members a.logout {
+  color: #E8583C;
+  padding: 0 .3em 0 .3em; }
+
+.inline {
+  display: inline; }
+
+.table .sorting_asc {
+  background: url("../images/asc.gif") no-repeat scroll right center #EEEEEE;
+  padding-right: 19px; }
+
+.table .sorting_desc {
+  background: url("../images/desc.gif") no-repeat scroll right center #EEEEEE;
+  padding-right: 19px; }
+
+.table .sorting {
+  background: url("../images/ascdesc.gif") no-repeat scroll right center #EEEEEE;
+  padding-right: 19px; }
+
+.table .nosort,
+.table .nosort.sorting_asc,
+.table .nosort.sorting_desc,
+.table .nosort.sorting {
+  background: #E2E8E8 none;
+  padding-right: 19px; }
+
+.table-bordered {
+  border-radius: 0; }
+  .table-bordered thead:first-child tr:first-child > th:first-child, .table-bordered thead:first-child tr:first-child > th:last-child {
+    border-radius: 0; }
+  .table-bordered thead:first-child tr:last-child > th:first-child, .table-bordered thead:first-child tr:last-child > th:last-child {
+    border-radius: 0; }
+
+#sci_logout {
+  color: #E8583C; }
+
+#sci_checkin_button,
+#sci_refresh_button,
+#sci_append_button {
+  margin-bottom: 10px; }
+
+#sci_refresh_button {
+  color: #333333; }
+
+/*# sourceMappingURL=maps/sco.css.map */
